--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-Flask==2.0.1
-Flask-SocketIO==4.3.1  # Compatible with python-socketio 4.6.1
-python-socketio==4.6.1
-numpy
-pandas==1.3.5  # Or another version that works for your project
-plotly==5.1.0
-eventlet==0.31.0
-SQLAlchemy==1.4.20
-setuptools==65.5.1
-distlib
-wheel
+numpy==1.26.4
+Flask==2.2.5  # Latest Flask version compatible with Python 3.12
+Flask-SocketIO==5.3.4  # Compatible with Python 3.12
+python-socketio==5.5.2  # Compatible with Flask-SocketIO 5.3.x
+pandas==2.0.0  # Works with Python 3.12
+plotly==5.15.0  # Latest version that supports Python 3.12
+eventlet==0.33.3  # Updated version for better compatibility with Flask-SocketIO
+SQLAlchemy==2.0.10  # Latest stable version supporting Python 3.12
+distlib==0.3.6  # Latest version
+wheel==0.40.0  # Required for proper wheel handling
