--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
+Flask==2.2.5
+Flask-SocketIO==5.3.4
+python-socketio==5.5.2
+pandas==2.0.0
 numpy==1.26.4
-Flask==2.2.5  # Latest Flask version compatible with Python 3.12
-Flask-SocketIO==5.3.4  # Compatible with Python 3.12
-python-socketio==5.5.2  # Compatible with Flask-SocketIO 5.3.x
-pandas==2.0.0  # Works with Python 3.12
-plotly==5.15.0  # Latest version that supports Python 3.12
-eventlet==0.33.3  # Updated version for better compatibility with Flask-SocketIO
-SQLAlchemy==2.0.10  # Latest stable version supporting Python 3.12
-distlib==0.3.6  # Latest version
-wheel==0.40.0  # Required for proper wheel handling
+plotly==5.15.0
+eventlet==0.36.1
+SQLAlchemy==2.0.10
+distlib==0.3.6
+wheel==0.40.0
+setuptools>=67
+Flask-Migrate==4.0.4
+mysqlclient==2.1.1
+nbconvert==7.8.0
+python-dotenv==1.0.0
