dockerfile works now

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
+pip>=24.2
+setuptools>=67
+wheel
+numpy==1.26.4
 Flask==2.2.5
 Flask-SocketIO==5.3.4
 python-socketio==5.5.2
 pandas==2.0.0
-numpy==1.26.4
 plotly==5.15.0
 eventlet==0.36.1
 SQLAlchemy==2.0.10
 distlib==0.3.6
 wheel==0.40.0
-setuptools>=67
-Flask-Migrate==4.0.4
 mysqlclient==2.1.1
+Flask-Migrate==4.0.4
 nbconvert==7.8.0
 python-dotenv==1.0.0
+Flask-SQLAlchemy==3.1.1
+
